--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
   font-family: sans-serif;
   background-attachment: fixed;
   background-size: cover;
+  background-image: url("hatter.jpg");
+  background-repeat: no-repeat;
 }
 
 #content {
@@ -51,10 +53,8 @@ p.imgtitle {
 }
 
 table {
+  border-collapse: collapse;
   border: 3px solid #0A82F7;
-}
-
-table {
   margin-right: 20px;
   background-color: rgba(227, 225, 233, 0.3);
 }
@@ -62,4 +62,23 @@ table {
 span {
   font-family: 'Courier New';
   font-weight: bold;
+}
+th {
+  background-color: #0A82F7;
+  color: white;
+}
+
+th, td {
+  border: 1px black solid;
+  padding: 15px;
+  text-align: center;
+}
+
+a, a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: yellow;
 }
